--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -4,11 +4,18 @@
       <link>
     <meta charset="utf-8">
     <title>KaPich</title>
+    <link rel="stylesheet" src="plugins/materialize/css/materialize.min.css"/>
   </head>
   <body>
       <header></header>
+
+      <div class="logoMarca">
+            <img src="http://i67.tinypic.com/15d11zt.png">
+      </div>
+      
     <tr>
       <td>
+          <h1 class="titulo">KaPiche</h1>
       <p><span>Fundada no ano de 2019, a KaPich é uma empresa que trabalha principalmente no setor de informática, área bastante <strong>competitiva</strong> e em constante crescimento, onde qualidade, variedade, garantia e eficiência são critérios importantíssimos para total satisfação, confiança e preferência de nossos consumidores.</span></p>
       <p><span>Além de nosso e-commerce situado em Erechim/RS temos nossa loja física também em Erechim/RS, onde temos a variedade de nosso site ao gosto dos mais exigentes clientes. Oferecemos não apenas a comodidade da compra online, mas também o tratamento olho no olho que muitos preferem e sempre confiam.</span></p>
       <p><span>Procuramos acima de tudo oferecer o que há de melhor, os melhores fornecedores, os mais atualizados produtos, o mais atencioso dos atendimentos, juntamente com os preços mais competitivos e atraentes do mercado para que nosso público encontre não apenas variedade e qualidade, mas também uma empresa que se preocupa com a felicidade e total satisfação de seus clientes e por que não, amigos!</span></p>
@@ -16,6 +23,30 @@
       <p><span><strong>DADOS CADASTRAIS KAPICH:</strong></span><br><span><strong>Razão Social:</strong> Bruno Guilherme João Da Silva</span><br><span><strong>CNPJ:</strong>01.234.567/8910-11</span><br><spa><strong>Inscrição Estadual:</strong>365289173</span></p>
       </td>
     </tr>
-    <footer class="footer"> 2019®, All Rights Reserved</footer>
+    <footer class="page-footer">
+        <div class="container">
+          <div class="row">
+            <div class="col l6 s12">
+              <h5 class="white-text">Footer Content</h5>
+              <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+            </div>
+            <div class="col l4 offset-l2 s12">
+              <h5 class="white-text">Links</h5>
+              <ul>
+                <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="footer-copyright">
+          <div class="container">
+          © 2019 Copyright Text
+          <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+          </div>
+        </div>
+      </footer>
   </body>
   </html>
