--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -4,7 +4,7 @@
       <link>
     <meta charset="utf-8">
     <title>KaPich</title>
-    <link rel="stylesheet" src="plugins/materialize/css/materialize.min.css"/>
+    <link href="../plugins/materialize/css/materialize.min.css" rel="stylesheet" type="text/css">
   </head>
   <body>
       <header></header>
@@ -20,15 +20,15 @@
       <p><span>Além de nosso e-commerce situado em Erechim/RS temos nossa loja física também em Erechim/RS, onde temos a variedade de nosso site ao gosto dos mais exigentes clientes. Oferecemos não apenas a comodidade da compra online, mas também o tratamento olho no olho que muitos preferem e sempre confiam.</span></p>
       <p><span>Procuramos acima de tudo oferecer o que há de melhor, os melhores fornecedores, os mais atualizados produtos, o mais atencioso dos atendimentos, juntamente com os preços mais competitivos e atraentes do mercado para que nosso público encontre não apenas variedade e qualidade, mas também uma empresa que se preocupa com a felicidade e total satisfação de seus clientes e por que não, amigos!</span></p>
       <p><span>Além de nosso site, visite também nossa loja estamos a sua espera!<br></span></p>
-      <p><span><strong>DADOS CADASTRAIS KAPICH:</strong></span><br><span><strong>Razão Social:</strong> Bruno Guilherme João Da Silva</span><br><span><strong>CNPJ:</strong>01.234.567/8910-11</span><br><spa><strong>Inscrição Estadual:</strong>365289173</span></p>
+      <p></p>
       </td>
     </tr>
     <footer class="page-footer">
         <div class="container">
           <div class="row">
             <div class="col l6 s12">
-              <h5 class="white-text">Footer Content</h5>
-              <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+              <h5 class="white-text">DADOS CADASTRAIS KAPICH:</h5>
+              <p class="grey-text text-lighten-4"><span><strong>Razão Social:</strong> Bruno Guilherme João Da Silva</span><br><span><strong>CNPJ:</strong>01.234.567/8910-11</span><br><spa><strong>Inscrição Estadual:</strong>365289173</span></p>
             </div>
             <div class="col l4 offset-l2 s12">
               <h5 class="white-text">Links</h5>
@@ -44,7 +44,7 @@
         <div class="footer-copyright">
           <div class="container">
           © 2019 Copyright Text
-          <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+          <a class="grey-text text-lighten-4 right" href="#!">Mais Links</a>
           </div>
         </div>
       </footer>
