--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -24,7 +24,7 @@
     </header>
     <main>
       <div class="logoMarca center-align">
-        <img src="http://i67.tinypic.com/15d11zt.png">
+        <img src="http://i67.tinypic.com/15d11zt.png" alt="Logo Kapich">
       </div>
       <div class="container">
         <tr>
