ajustes do logo no header

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -6,6 +6,7 @@
     <title>KaPich</title>
     <link href="../plugins/materialize/css/materialize.min.css" rel="stylesheet" type="text/css">
     <link href="../styles/sobre.css" rel="stylesheet" type="text/css">
+    <link href="../styles/main.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <header>
