--- a/pages/login.html
+++ b/pages/login.html
@@ -8,19 +8,19 @@
     <link href="../plugins/materialize/css/materialize.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel='stylesheet' type='text/css' href='../styles/main.css'>
-    
+    <link rel='stylesheet' type='text/css' href='../styles/login.css'>
 </head>
 <body>
     <section>
         <object class="cabecalho" type="text/html" data="../components/header.html"></object>
     </section>
-    <div class="col s12 z-depth-6 card-panel">
-        <form class="login-form">
+    <div class="col s6 card-panel hoverable">
+        <form class="login-form" >
           <div class="row">
             <div class="input-field col s12">
-              <i class="material-icons prefix">mail_outline</i>
-              <input class="validate" id="email" type="email" required>
-              <label for="email" data-error="wrong" data-success="right" data-error="wrong" data-success="right">E-mail</label>
+              <i class="material-icons prefix">perm_identity</i>
+              <input class="validate" id="email" type="text" required>
+              <label for="email" data-error="wrong" data-success="right" data-error="wrong" data-success="right">E-mail/CPF</label>
             </div>
           </div>
           <div class="row">
@@ -30,18 +30,18 @@
               <label for="password">Senha</label>
             </div>
           </div>
-          <div class="row">          
+          <div class="row">
             <div class="input-field col s12 m12 l12  login-text">
                 <label for="remember-me">
                     <input type="checkbox" id="remember-me" />
                     <span for="remember-me">Lembrar-me</span>
                 </label>
-                
+
             </div>
           </div>
           <div class="row">
             <div class="input-field col s12">
-              <input type="submit" class="btn waves-effect waves-red col s12" value="Login"/>
+              <input type="submit" class="btn waves-effect waves-red col s12" onclick="login()" value="Login"/>
             </div>
           </div>
           <div class="row">
@@ -50,9 +50,9 @@
             </div>
             <div class="input-field col s6 m6 l6">
                 <p class="margin right-align medium-small"><a href="#">Esqueci minha senha</a></p>
-            </div>          
+            </div>
           </div>
-  
+
         </form>
       </div>
     </div>
@@ -60,5 +60,19 @@
         <object class="rodape" type="text/html" data="../components/footer.html"></object>
     </section>
     <script src="../plugins/materialize/js/materialize.min.js"></script>
+    <script type="text/javascript">
+      function login(){
+        let emailOrCPF = document.getElementById("email").value;;
+        console.log(emailOrCPF);
+        let senha = document.getElementById("password").value;
+        console.log(senha);
+        if(emailOrCPF== null || senha == null){
+          alert("Parametros invalidos, verifique seu E-mail/CPF e sua senha.");
+        }else{
+          alert("Login Efetuado com Sucesso");
+        }
+      }
+    </script>
+
 </body>
 </html>
