adicionado menu com dropdown ao header e feito pequenas alteracoes de layout

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -21,9 +21,17 @@
         <tr>
           <td>
               <h1 class="titulo">KaPich</h1>
-          <p><span>Fundada no ano de 2019, a KaPich é uma empresa que trabalha principalmente no setor de informática, área bastante <strong>competitiva</strong> e em constante crescimento, onde qualidade, variedade, garantia e eficiência são critérios importantíssimos para total satisfação, confiança e preferência de nossos consumidores.</span></p>
-          <p><span>Além de nosso e-commerce situado em Erechim/RS temos nossa loja física também em Erechim/RS, onde temos a variedade de nosso site ao gosto dos mais exigentes clientes. Oferecemos não apenas a comodidade da compra online, mas também o tratamento olho no olho que muitos preferem e sempre confiam.</span></p>
-          <p><span>Procuramos acima de tudo oferecer o que há de melhor, os melhores fornecedores, os mais atualizados produtos, o mais atencioso dos atendimentos, juntamente com os preços mais competitivos e atraentes do mercado para que nosso público encontre não apenas variedade e qualidade, mas também uma empresa que se preocupa com a felicidade e total satisfação de seus clientes e por que não, amigos!</span></p>
+          <p><span>Fundada no ano de 2019, a KaPich é uma empresa que trabalha principalmente no setor de informática,
+          área bastante <strong>competitiva</strong> e em constante crescimento, onde qualidade, variedade, garantia e
+          eficiência são critérios importantíssimos para total satisfação, confiança e preferência de nossos consumidores.
+          </span></p>
+          <p><span>Além de nosso e-commerce situado em Erechim/RS temos nossa loja física também em Erechim/RS, onde temos
+          a variedade de nosso site ao gosto dos mais exigentes clientes. Oferecemos não apenas a comodidade da compra online,
+          mas também o tratamento olho no olho que muitos preferem e sempre confiam.</span></p>
+          <p><span>Procuramos acima de tudo oferecer o que há de melhor, os melhores fornecedores, os mais atualizados produtos,
+          o mais atencioso dos atendimentos, juntamente com os preços mais competitivos e atraentes do mercado para que nosso
+          público encontre não apenas variedade e qualidade, mas também uma empresa que se preocupa com a felicidade e total
+          satisfação de seus clientes e por que não, amigos!</span></p>
           <p><span>Além de nosso site, visite também nossa loja estamos a sua espera!<br></span></p>
           <p>
             <h5 class="black-text">DADOS CADASTRAIS KAPICH:</h5>
@@ -34,13 +42,11 @@
                 <strong>CNPJ:</strong>01.234.567/8910-11
               </span><br>
               <span>
-                <strong>Inscrição Estadual:</strong>365289173
+                <strong>Inscrição Estadual:</strong>123456789
               </span>
             </p>
           </td>
         </tr>
-
-
         <div class="section">
             <div class="row center-align">
               <div class="col s6">
@@ -68,5 +74,6 @@
     <section>
       <object class="rodape" type="text/html" data="../components/footer.html"></object>
     </section>
+    <script src="../plugins/materialize/js/materialize.js"></script>
     </body>
   </html>
