--- a/pages/login.html
+++ b/pages/login.html
@@ -46,10 +46,10 @@
           </div>
           <div class="row">
             <div class="input-field col s6 m6 l6">
-              <p class="margin medium-small"><a href="#">Registre-se!</a></p>
+              <p class="margin medium-small"><a class="login-registro-lembrar" href="#">Registre-se!</a></p>
             </div>
             <div class="input-field col s6 m6 l6">
-                <p class="margin right-align medium-small"><a href="#">Esqueci minha senha</a></p>
+                <p class="margin right-align medium-small"><a class="login-registro-lembrar" href="#">Esqueci minha senha</a></p>
             </div>
           </div>
 
