--- a/pages/login.html
+++ b/pages/login.html
@@ -46,7 +46,7 @@
           </div>
           <div class="row">
             <div class="input-field col s6 m6 l6">
-              <p class="margin medium-small"><a class="login-registro-lembrar" href="#">Registre-se!</a></p>
+              <p class="margin medium-small"><a class="login-registro-lembrar" href="cadastroUsuario.html" target="_top">Registre-se!</a></p>
             </div>
             <div class="input-field col s6 m6 l6">
                 <p class="margin right-align medium-small"><a class="login-registro-lembrar" href="#">Esqueci minha senha</a></p>
