--- a/pages/cadastroUsuario.html
+++ b/pages/cadastroUsuario.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="../plugins/jquery/jquery.maskedinput.js"></script>
+  <!-- <script src="../plugins/jquery/jquery.maskedinput.js"></script> -->
   <script src="../plugins/materialize/js/materialize.min.js"></script>
 
 </head>
@@ -19,60 +19,62 @@
     <object class="cabecalho" type="text/html" data="../components/header.html"></object>
   </section>
   <div class="container" id="formValidate">
-  <div class="row">
-    <form class="col s12">
-      <div class="row">
-        <div class="input-field col s6">
-          <i class="material-icons prefix">account_circle</i>
-          <input id="nome" name="nome" type="text">
-          <label for="nome" data-error="Preencha o campo Nome" class="active" required>Nome</label>
-          <label for="nome">Nome</label>
+    <div class="row">
+      <form class="col s12">
+        <div class="row">
+          <div class="input-field col s6">
+            <i class="material-icons prefix">account_circle</i>
+            <input id="nome" name="nome" type="text">
+            <span class="spanInvalid spanNone" id="spanName"> *Nome Inválido! </span>
+            <label for="nome">Nome</label>
+          </div>
+          <div class="input-field col s6">
+            <i class="material-icons prefix">style</i>
+            <input id="cpf" type="text" class="validate">
+            <span class="spanInvalid spanNone" id="spanCPF"> *CPF Inválido! </span>
+            <label for="cpf">CPF</label>
+          </div>
         </div>
-        <div class="input-field col s6">
-          <i class="material-icons prefix">style</i>
-          <input id="cpf" type="number" class="validate" required>
-          <label for="cpf">CPF</label>
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s6">
+        <div class="row">
+          <div class="input-field col s6">
             <i class="material-icons prefix">phone</i>
-            <input id="telefone" type="text" class="validate" pattern="^\d{4}-\d{3}-\d{4}$" required>
+            <input id="telefone" type="text" class="validate">
+            <span class="spanInvalid spanNone" id="spanPhone"> *Telefone Inválido! </span>
             <label for="telefone">Telefone</label>
+          </div>
+          <div class="input-field col s6">
+            <i class="material-icons prefix">email</i>
+            <input id="email" type="email" class="validate">
+            <span class="spanInvalid spanNone" id="spanEmail"> *Email Inválido! </span>
+            <label for="email">Email</label>
+          </div>
         </div>
-        <div class="input-field col s6">
-          <i class="material-icons prefix">email</i>
-          <input id="email" type="email" class="validate">
-          <label for="email">Email</label>
+        <div class="row">
+          <div class="input-field col s6">
+            <i class="material-icons prefix">enhanced_encryption</i>
+            <input id="password" type="password" class="validate">
+            <span class="spanInvalid spanNone" id="spanPassword"> *Senhas não conferem! </span>
+            <label for="password">Senha</label>
+          </div>
+          <div class="input-field col s6">
+            <i class="material-icons prefix">enhanced_encryption</i>
+            <input id="rpassword" type="password" class="validate">
+            <span class="spanInvalid spanNone" id="spanrPassword"> *Senhas não conferem! </span>
+            <label for="rpassword">Repita a Senha</label>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s6">
-          <i class="material-icons prefix">enhanced_encryption</i>
-          <input id="password" type="password" class="validate" required>
-          <label for="password">Senha</label>
-        </div>
-        <div class="input-field col s6">
-          <i class="material-icons prefix">enhanced_encryption</i>
-          <input id="rpassword" type="password" class="validate" required>
-          <label for="rpassword">Repita a Senha</label>
-        </div>
-      </div>
-      <button class="btn waves-effect waves-light" type="submit" name="action">Salvar
-        <i class="material-icons right">send</i>
-      </button>
+        <button id="button" class="btn waves-effect waves-light" type="submit" name="action">Salvar
+          <i class="material-icons right">send</i>
+        </button>
 
-      <script>
+        <script src="../scripts/validationsUser.js"></script>
 
-      $("#telefone").mask("(00) 0000-00009");
-
-      </script>
-
-    </form>
-  </div>
+      </form>
+    </div>
   </div>
   <section>
     <object class="rodape" type="text/html" data="../components/footer.html"></object>
   </section>
 </body>
+
 </html>
