adicionado banner e uma das secoes a pagina

--- a/index.html
+++ b/index.html
@@ -1,12 +1,82 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Kapich</title>
-</head>
-<body>
-    <h1>Home</h1>
-</body>
-</html>
+<html lang="pt-br" dir="ltr">
+  <head>
+      <link>
+    <meta charset="utf-8">
+    <title>KaPich</title>
+    <link href="plugins/materialize/css/materialize.min.css" rel="stylesheet" type="text/css">
+    <link href="styles/sobre.css" rel="stylesheet" type="text/css">
+    <link href="styles/main.css" rel="stylesheet" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  </head>
+  <body>
+    <section>
+      <object class="cabecalho" type="text/html" data="components/header.html"></object>
+    </section>
+
+      <div class="slider">
+        <ul class="slides">
+          <li>
+            <a href="#">
+              <img src="https://lorempixel.com/580/250/nature/1"> <!-- random image -->
+              <div class="caption center-align">
+                <h3>This is our big Tagline!</h3>
+                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="https://lorempixel.com/580/250/nature/2"> <!-- random image -->
+              <div class="caption left-align">
+                <h3>Left Aligned Caption</h3>
+                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="https://lorempixel.com/580/250/nature/3"> <!-- random image -->
+              <div class="caption right-align">
+                <h3>Right Aligned Caption</h3>
+                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="https://lorempixel.com/580/250/nature/4"> <!-- random image -->
+              <div class="caption center-align">
+                <h3>This is our big Tagline!</h3>
+                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+    <div class="section">
+      <div class="row">
+        <h3>Mais Vendidos</h3>
+        <div class="col s12 m3">
+          <div class="card">
+            <div class="card-image">
+              <img src="https://lorempixel.com/580/250/nature/4">
+              <a class="btn-floating halfway-fab waves-effect waves-light black"><i class="material-icons">add</i></a>
+            </div>
+            <div class="card-content">
+              <p>I am a very simple card. I am good at containing small bits of information.
+                I am convenient because I require little markup to use effectively.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <section>
+      <object class="rodape" type="text/html" data="components/footer.html"></object>
+    </section>
+    <script src="plugins/materialize/js/materialize.js"></script>
+    <script src="scripts/banner-home.js"></script>
+    </body>
+  </html>
