ajuste de layout e inicio das secoes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul class="slides">
           <li>
             <a href="#">
-              <img src="https://lorempixel.com/580/250/nature/1"> <!-- random image -->
+              <img class="img-bannerHome" src="https://lorempixel.com/580/250/nature/1"> <!-- random image -->
               <div class="caption center-align">
                 <h3>This is our big Tagline!</h3>
                 <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
@@ -28,7 +28,7 @@
           </li>
           <li>
             <a href="#">
-              <img src="https://lorempixel.com/580/250/nature/2"> <!-- random image -->
+              <img class="img-bannerHome" src="https://lorempixel.com/580/250/nature/2"> <!-- random image -->
               <div class="caption left-align">
                 <h3>Left Aligned Caption</h3>
                 <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
@@ -37,7 +37,7 @@
           </li>
           <li>
             <a href="#">
-              <img src="https://lorempixel.com/580/250/nature/3"> <!-- random image -->
+              <img class="img-bannerHome" src="https://lorempixel.com/580/250/nature/3"> <!-- random image -->
               <div class="caption right-align">
                 <h3>Right Aligned Caption</h3>
                 <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
@@ -46,7 +46,7 @@
           </li>
           <li>
             <a href="#">
-              <img src="https://lorempixel.com/580/250/nature/4"> <!-- random image -->
+              <img class="img-bannerHome" src="https://lorempixel.com/580/250/nature/4"> <!-- random image -->
               <div class="caption center-align">
                 <h3>This is our big Tagline!</h3>
                 <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
@@ -58,21 +58,29 @@
 
     <div class="section">
       <div class="row">
-        <h3>Mais Vendidos</h3>
-        <div class="col s12 m3">
-          <div class="card">
-            <div class="card-image">
-              <img src="https://lorempixel.com/580/250/nature/4">
-              <a class="btn-floating halfway-fab waves-effect waves-light black"><i class="material-icons">add</i></a>
+      <div class="col s6 push-s6"><span class="flow-text">Mais vendidos</span>
+        <div class="row">
+          <div class="col s12 m7">
+            <div class="card small">
+              <!-- COLOCA O PROD AQUI -->
             </div>
-            <div class="card-content">
-              <p>I am a very simple card. I am good at containing small bits of information.
-                I am convenient because I require little markup to use effectively.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col s6 pull-s6"><span class="flow-text">Novidades</span>
+        <div class="row">
+          <div class="col s12 m7">
+            <div class="card small">
+              <!-- COLOCA O PROD AQUI OU AQUI -->
             </div>
           </div>
         </div>
       </div>
     </div>
+
+    </div>
+
     <section>
       <object class="rodape" type="text/html" data="components/footer.html"></object>
     </section>
