ajustes no banner da home

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul class="slides">
           <li>
             <a href="#">
-              <img class="img-bannerHome" src="https://lorempixel.com/580/250/nature/1"> <!-- random image -->
+              <img class="img-bannerHome" src="images/banner-home1.png"> <!-- random image -->
               <div class="caption center-align">
                 <h3>This is our big Tagline!</h3>
                 <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
@@ -28,7 +28,7 @@
           </li>
           <li>
             <a href="#">
-              <img class="img-bannerHome" src="https://lorempixel.com/580/250/nature/2"> <!-- random image -->
+              <img class="img-bannerHome" src="images/banner-home2.svg"> <!-- random image -->
               <div class="caption left-align">
                 <h3>Left Aligned Caption</h3>
                 <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
@@ -37,7 +37,7 @@
           </li>
           <li>
             <a href="#">
-              <img class="img-bannerHome" src="https://lorempixel.com/580/250/nature/3"> <!-- random image -->
+              <img class="img-bannerHome" src="images/banner-home3.svg"> <!-- random image -->
               <div class="caption right-align">
                 <h3>Right Aligned Caption</h3>
                 <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
@@ -46,7 +46,7 @@
           </li>
           <li>
             <a href="#">
-              <img class="img-bannerHome" src="https://lorempixel.com/580/250/nature/4"> <!-- random image -->
+              <img class="img-bannerHome" src="images/banner-home4.svg"> <!-- random image -->
               <div class="caption center-align">
                 <h3>This is our big Tagline!</h3>
                 <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
@@ -133,5 +133,6 @@
     </section>
     <script src="plugins/materialize/js/materialize.js"></script>
     <script src="scripts/banner-home.js"></script>
+    <script src="scripts/ajuste-tam-home-banner.js"></script>
     </body>
   </html>
