adicionado mais produtos

--- a/index.html
+++ b/index.html
@@ -125,6 +125,92 @@
                 </div>
               </div>
             </div>
+            <div class="col s12 m6 xl4">
+          <div class="card sticky-action large hoverable">
+            <span class="white-text badge black lighten-1 percent">Discount 31%</span>
+            <div class="card-image">
+              <i class="material-icons waves-effect waves-circle close-icon activator">more_vert</i>
+              <a href="https://materialize.myefforts.ru/iphone-7-plus-red-special-edition-256gb-en">
+                <img class="responsive-img lazyloaded" src="https://materialize.myefforts.ru/image/cache/catalog/goods/smartphones/iphone/iphone-7-plus/iphone-7-plus-red-1-250x250.jpg" data-src="https://materialize.myefforts.ru/image/cache/catalog/goods/smartphones/iphone/iphone-7-plus/iphone-7-plus-red-1-250x250.jpg" alt="iPhone 7 Plus (PRODUCT)RED™ Special Edition 256GB" title="iPhone 7 Plus (PRODUCT)RED™ Special Edition 256GB"></a>
+              </div>
+              <div class="card-content center-align">
+                <span class="card-title">
+                  <a href="https://materialize.myefforts.ru/iphone-7-plus-red-special-edition-256gb-en" class="grey-text text-darken-4">iPhone 7 Plus (PRODUCT)RED™ Special Edition 256GB</a>
+                </span>
+              </div>
+              <div class="card-action center-align grey lighten-5">
+                <button class="btn btn-floating btn-large waves-effect waves-light black add-cart" title="Add to Cart" onclick="cart.add('53');">
+                  <i class="material-icons">add_shopping_cart</i>
+                </button>
+                <span class="card-price old-price grey-text">De: R$ 875.00</span><br/>
+                <span class="card-price black-text text-darken-2">Por: R$ 600.00</span>
+                <div class="rating">
+                  <hr>
+                  <span class="grey lighten-5">
+                    <i class="material-icons">star</i>
+                    <i class="material-icons">star</i>
+                    <i class="material-icons">star</i>
+                    <i class="material-icons">star</i>
+                    <i class="material-icons">star_border</i>
+                  </span>
+                </div>
+                <a href="https://materialize.myefforts.ru/iphone-7-plus-red-special-edition-256gb-en" class="btn waves-effect waves-light black width-max">Mais Informações</a>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title">
+                  <a href="https://materialize.myefforts.ru/iphone-7-plus-red-special-edition-256gb-en" class="grey-text text-darken-4">iPhone 7 Plus (PRODUCT)RED™ Special Edition 256GB</a>
+                  <i class="material-icons waves-effect waves-circle close-icon">close</i>
+                </span>
+                <p>Texto de demonstração blabalbalbal
+                enchendo linhas para teste
+                lalalalalalalalalalalal ta massa, top
+                pão de alho.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col s12 m6 xl4">
+          <div class="card sticky-action large hoverable">
+            <span class="white-text badge black lighten-1 percent">Discount 31%</span>
+            <div class="card-image">
+              <i class="material-icons waves-effect waves-circle close-icon activator">more_vert</i>
+              <a href="https://materialize.myefforts.ru/iphone-7-plus-red-special-edition-256gb-en">
+                <img class="responsive-img lazyloaded" src="https://materialize.myefforts.ru/image/cache/catalog/goods/smartphones/iphone/iphone-7-plus/iphone-7-plus-red-1-250x250.jpg" data-src="https://materialize.myefforts.ru/image/cache/catalog/goods/smartphones/iphone/iphone-7-plus/iphone-7-plus-red-1-250x250.jpg" alt="iPhone 7 Plus (PRODUCT)RED™ Special Edition 256GB" title="iPhone 7 Plus (PRODUCT)RED™ Special Edition 256GB"></a>
+              </div>
+              <div class="card-content center-align">
+                <span class="card-title">
+                  <a href="https://materialize.myefforts.ru/iphone-7-plus-red-special-edition-256gb-en" class="grey-text text-darken-4">iPhone 7 Plus (PRODUCT)RED™ Special Edition 256GB</a>
+                </span>
+              </div>
+              <div class="card-action center-align grey lighten-5">
+                <button class="btn btn-floating btn-large waves-effect waves-light black add-cart" title="Add to Cart" onclick="cart.add('53');">
+                  <i class="material-icons">add_shopping_cart</i>
+                </button>
+                <span class="card-price old-price grey-text">De: R$ 875.00</span><br/>
+                <span class="card-price black-text text-darken-2">Por: R$ 600.00</span>
+                <div class="rating">
+                  <hr>
+                  <span class="grey lighten-5">
+                    <i class="material-icons">star</i>
+                    <i class="material-icons">star</i>
+                    <i class="material-icons">star</i>
+                    <i class="material-icons">star</i>
+                    <i class="material-icons">star_border</i>
+                  </span>
+                </div>
+                <a href="https://materialize.myefforts.ru/iphone-7-plus-red-special-edition-256gb-en" class="btn waves-effect waves-light black width-max">Mais Informações</a>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title">
+                  <a href="https://materialize.myefforts.ru/iphone-7-plus-red-special-edition-256gb-en" class="grey-text text-darken-4">iPhone 7 Plus (PRODUCT)RED™ Special Edition 256GB</a>
+                  <i class="material-icons waves-effect waves-circle close-icon">close</i>
+                </span>
+                <p>Texto de demonstração blabalbalbal
+                enchendo linhas para teste
+                lalalalalalalalalalalal ta massa, top
+                pão de alho.</p>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
 
