grid de produtos e novidades

--- a/index.html
+++ b/index.html
@@ -56,31 +56,145 @@
         </ul>
       </div>
 
-    <div class="section">
+    <div class="section" >
       <div class="row">
-      <div class="col s6 push-s6"><span class="flow-text">Mais vendidos</span>
-        <div class="row">
-          <div class="col s12 m7">
-            <div class="card small">
-              <!-- COLOCA O PROD AQUI -->
+        <div class="col s12" ><span class="flow-text">Mais vendidos</span>
+          <div class="row">
+            <div class="col s12 m3">
+              <div class="card small">
+                <!-- COLOCA O PROD AQUI -->
+                <div class="card-image">
+                  <img src="https://cdn.pichau.com.br/catalog/product/cache/14035723553183b9d29277c409fc60a6/g/9/g933-3.jpg">
+                </div>
+                <div class="card-content">
+                  <strong>R$ </strong>
+                  00,00
+                </div>
+                <div class="card-action center-align">
+                  <a href="#">Comprar</a>
+                </div>
+              </div>
+            </div>
+            <div class="col s12 m3">
+              <div class="card small">
+                <!-- COLOCA O PROD AQUI -->
+                <div class="card-image">
+                  <img src="https://cdn.pichau.com.br/catalog/product/cache/14035723553183b9d29277c409fc60a6/g/9/g933-3.jpg">
+                </div>
+                <div class="card-content">
+                  <strong>R$ </strong>
+                  00,00
+                </div>
+                <div class="card-action center-align">
+                  <a href="#">Comprar</a>
+                </div>
+              </div>
+            </div>
+            <div class="col s12 m3">
+              <div class="card small">
+                <!-- COLOCA O PROD AQUI -->
+                <div class="card-image">
+                  <img src="https://cdn.pichau.com.br/catalog/product/cache/14035723553183b9d29277c409fc60a6/g/9/g933-3.jpg">
+                </div>
+                <div class="card-content">
+                  <strong>R$ </strong>
+                  00,00
+                </div>
+                <div class="card-action center-align">
+                  <a href="#">Comprar</a>
+                </div>
+              </div>
+            </div>
+            <div class="col s12 m3">
+              <div class="card small">
+                <!-- COLOCA O PROD AQUI -->
+                <div class="card-image small">
+                  <img src="https://cdn.pichau.com.br/catalog/product/cache/14035723553183b9d29277c409fc60a6/g/9/g933-3.jpg">
+                </div>
+                <div class="card-content">
+                  <strong>R$ </strong>
+                  00,00
+                </div>
+                <div class="card-action center-align">
+                  <a href="#">Comprar</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-
-      <div class="col s6 pull-s6"><span class="flow-text">Novidades</span>
-        <div class="row">
-          <div class="col s12 m7">
-            <div class="card small">
-              <!-- COLOCA O PROD AQUI OU AQUI -->
+    </div>  
+    <div class="section" >
+      <div class="row">
+        <div class="col s12" ><span class="flow-text">Novidades</span>
+          <div class="row">
+            <div class="col s12 m3">
+              <div class="card small">
+                <!-- COLOCA O PROD AQUI -->
+                <div class="card-image">
+                  <img src="https://cdn.pichau.com.br/catalog/product/cache/14035723553183b9d29277c409fc60a6/g/9/g933-3.jpg">
+                </div>
+                <div class="card-content">
+                  <strong>R$ </strong>
+                  00,00
+                </div>
+                <div class="card-action center-align">
+                  <a href="#">Comprar</a>
+                </div>
+              </div>
+            </div>
+            <div class="col s12 m3">
+              <div class="card small">
+                <!-- COLOCA O PROD AQUI -->
+                <div class="card-image">
+                  <img src="https://cdn.pichau.com.br/catalog/product/cache/14035723553183b9d29277c409fc60a6/g/9/g933-3.jpg">
+                </div>
+                <div class="card-content">
+                  <strong>R$ </strong>
+                  00,00
+                </div>
+                <div class="card-action center-align">
+                  <a href="#">Comprar</a>
+                </div>
+              </div>
+            </div>
+            <div class="col s12 m3">
+              <div class="card small">
+                <!-- COLOCA O PROD AQUI -->
+                <div class="card-image">
+                  <img src="https://cdn.pichau.com.br/catalog/product/cache/14035723553183b9d29277c409fc60a6/g/9/g933-3.jpg">
+                </div>
+                <div class="card-content">
+                  <strong>R$ </strong>
+                  00,00
+                </div>
+                <div class="card-action center-align">
+                  <a href="#">Comprar</a>
+                </div>
+              </div>
+            </div>
+            <div class="col s12 m3">
+              <div class="card small">
+                <!-- COLOCA O PROD AQUI -->
+                <div class="card-image small">
+                  <img src="https://cdn.pichau.com.br/catalog/product/cache/14035723553183b9d29277c409fc60a6/g/9/g933-3.jpg">
+                </div>
+                <div class="card-content">
+                  <strong>R$ </strong>
+                  00,00
+                </div>
+                <div class="card-action center-align">
+                  <a href="#">Comprar</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
+    </div>  
 
     </div>
-    <section class="section href-underline"><h3>Titulo</h3>
+    <section class="section href-underline"><h3>Produtos</h3>
       <div class="row">
         <div class="col s12 m6 xl4">
           <div class="card sticky-action large hoverable">
