--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
       <object class="cabecalho" type="text/html" data="components/header.html"></object>
     </section>
 
+
       <div class="slider">
         <ul class="slides">
           <li>
             <a href="#">
               <img class="img-bannerHome" src="images/banner-home1.png"> <!-- random image -->
               <div class="caption center-align">
-                <h3>This is our big Tagline!</h3>
-                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                <h3></h3>
+                <h5 class="light grey-text text-lighten-3"></h5>
               </div>
             </a>
           </li>
@@ -30,8 +31,8 @@
             <a href="#">
               <img class="img-bannerHome" src="images/banner-home2.svg"> <!-- random image -->
               <div class="caption left-align">
-                <h3>Left Aligned Caption</h3>
-                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                <h3></h3>
+                <h5 class="light grey-text text-lighten-3"></h5>
               </div>
             </a>
           </li>
@@ -39,8 +40,8 @@
             <a href="#">
               <img class="img-bannerHome" src="images/banner-home3.svg"> <!-- random image -->
               <div class="caption right-align">
-                <h3>Right Aligned Caption</h3>
-                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                <h3></h3>
+                <h5 class="light grey-text text-lighten-3"></h5>
               </div>
             </a>
           </li>
@@ -48,8 +49,8 @@
             <a href="#">
               <img class="img-bannerHome" src="images/banner-home4.svg"> <!-- random image -->
               <div class="caption center-align">
-                <h3>This is our big Tagline!</h3>
-                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                <h3></h3>
+                <h5 class="light grey-text text-lighten-3"></h5>
               </div>
             </a>
           </li>
@@ -71,7 +72,22 @@
                   00,00
                 </div>
                 <div class="card-action center-align">
-                  <a href="#">Comprar</a>
+                  <a class="waves-effect waves-light black btn">Comprar</a>
+                </div>
+              </div>
+            </div>
+            <div class="col s12 m3">
+              <div class="card small">
+                <!-- COLOCA O PROD AQUI -->
+                <div class="card-image">
+                  <img class="black-text" src="https://cdn.pichau.com.br/catalog/product/cache/14035723553183b9d29277c409fc60a6/g/9/g933-3.jpg">
+                </div>
+                <div class="card-content">
+                  <strong>R$ </strong>
+                  00,00
+                </div>
+                <div class="card-action center-align">
+                  <a class="waves-effect waves-light black btn">Comprar</a>
                 </div>
               </div>
             </div>
@@ -86,22 +102,7 @@
                   00,00
                 </div>
                 <div class="card-action center-align">
-                  <a href="#">Comprar</a>
-                </div>
-              </div>
-            </div>
-            <div class="col s12 m3">
-              <div class="card small">
-                <!-- COLOCA O PROD AQUI -->
-                <div class="card-image">
-                  <img src="https://cdn.pichau.com.br/catalog/product/cache/14035723553183b9d29277c409fc60a6/g/9/g933-3.jpg">
-                </div>
-                <div class="card-content">
-                  <strong>R$ </strong>
-                  00,00
-                </div>
-                <div class="card-action center-align">
-                  <a href="#">Comprar</a>
+                  <a class="waves-effect waves-light black btn">Comprar</a>
                 </div>
               </div>
             </div>
@@ -116,14 +117,14 @@
                   00,00
                 </div>
                 <div class="card-action center-align">
-                  <a href="#">Comprar</a>
+                  <a class="waves-effect waves-light black btn">Comprar</a>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>  
+    </div>
     <div class="section" >
       <div class="row">
         <div class="col s12" ><span class="flow-text">Novidades</span>
@@ -139,7 +140,7 @@
                   00,00
                 </div>
                 <div class="card-action center-align">
-                  <a href="#">Comprar</a>
+                  <a class="waves-effect waves-light black btn">Comprar</a>
                 </div>
               </div>
             </div>
@@ -154,7 +155,7 @@
                   00,00
                 </div>
                 <div class="card-action center-align">
-                  <a href="#">Comprar</a>
+                  <a class="waves-effect waves-light black btn">Comprar</a>
                 </div>
               </div>
             </div>
@@ -169,7 +170,7 @@
                   00,00
                 </div>
                 <div class="card-action center-align">
-                  <a href="#">Comprar</a>
+                  <a class="waves-effect waves-light black btn">Comprar</a>
                 </div>
               </div>
             </div>
@@ -184,21 +185,21 @@
                   00,00
                 </div>
                 <div class="card-action center-align">
-                  <a href="#">Comprar</a>
+                  <a class="waves-effect waves-light black btn">Comprar</a>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>  
+    </div>
 
     </div>
     <section class="section href-underline"><h3>Produtos</h3>
       <div class="row">
         <div class="col s12 m6 xl4">
           <div class="card sticky-action large hoverable">
-            <span class="white-text badge black lighten-1 percent">Discount 31%</span>
+            <span class="white-text badge black lighten-1 percent">Desconto 31%</span>
             <div class="card-image">
               <i class="material-icons waves-effect waves-circle close-icon activator">more_vert</i>
               <a href="https://materialize.myefforts.ru/iphone-7-plus-red-special-edition-256gb-en">
@@ -210,7 +211,7 @@
                 </span>
               </div>
               <div class="card-action center-align grey lighten-5">
-                <button class="btn btn-floating btn-large waves-effect waves-light black add-cart" title="Add to Cart" onclick="cart.add('53');">
+                <button class="btn btn-floating btn-large waves-effect waves-light black add-cart" title="Adicionar ao carrinho" onclick="cart.add('53');">
                   <i class="material-icons">add_shopping_cart</i>
                 </button>
                 <span class="card-price old-price grey-text">De: R$ 875.00</span><br/>
@@ -241,7 +242,7 @@
             </div>
             <div class="col s12 m6 xl4">
           <div class="card sticky-action large hoverable">
-            <span class="white-text badge black lighten-1 percent">Discount 31%</span>
+            <span class="white-text badge black lighten-1 percent">Desconto 31%</span>
             <div class="card-image">
               <i class="material-icons waves-effect waves-circle close-icon activator">more_vert</i>
               <a href="https://materialize.myefforts.ru/iphone-7-plus-red-special-edition-256gb-en">
@@ -253,7 +254,7 @@
                 </span>
               </div>
               <div class="card-action center-align grey lighten-5">
-                <button class="btn btn-floating btn-large waves-effect waves-light black add-cart" title="Add to Cart" onclick="cart.add('53');">
+                <button class="btn btn-floating btn-large waves-effect waves-light black add-cart" title="Adicionar ao carrinho" onclick="cart.add('53');">
                   <i class="material-icons">add_shopping_cart</i>
                 </button>
                 <span class="card-price old-price grey-text">De: R$ 875.00</span><br/>
@@ -284,7 +285,7 @@
             </div>
             <div class="col s12 m6 xl4">
           <div class="card sticky-action large hoverable">
-            <span class="white-text badge black lighten-1 percent">Discount 31%</span>
+            <span class="white-text badge black lighten-1 percent">Desconto 31%</span>
             <div class="card-image">
               <i class="material-icons waves-effect waves-circle close-icon activator">more_vert</i>
               <a href="https://materialize.myefforts.ru/iphone-7-plus-red-special-edition-256gb-en">
@@ -296,7 +297,7 @@
                 </span>
               </div>
               <div class="card-action center-align grey lighten-5">
-                <button class="btn btn-floating btn-large waves-effect waves-light black add-cart" title="Add to Cart" onclick="cart.add('53');">
+                <button class="btn btn-floating btn-large waves-effect waves-light black add-cart" title="Adicionar ao carrinho" onclick="cart.add('53');">
                   <i class="material-icons">add_shopping_cart</i>
                 </button>
                 <span class="card-price old-price grey-text">De: R$ 875.00</span><br/>
@@ -333,6 +334,5 @@
     </section>
     <script src="plugins/materialize/js/materialize.js"></script>
     <script src="scripts/banner-home.js"></script>
-    <script src="scripts/ajuste-tam-home-banner.js"></script>
     </body>
   </html>
