--- a/pages/cadastroUsuario.html
+++ b/pages/cadastroUsuario.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Cadastro de Usuário</title>
+  <meta charset='utf-8'>
   <meta name="viewport" content="width = device-width, initial-scale = 1">
   <link href="../styles/main.css" rel="stylesheet" type="text/css">
   <link href="../styles/cadastro-usuario.css" rel="stylesheet" type="text/css">
@@ -20,7 +21,7 @@
   </section>
   <div class="container" id="formValidate">
     <div class="row">
-      <form class="col s12">
+      <form class="col s12 formulario">
         <div class="row">
           <div class="input-field col s6">
             <i class="material-icons prefix">account_circle</i>
