Criado TokenController e adicionado ao Login

--- a/pages/login.html
+++ b/pages/login.html
@@ -63,6 +63,7 @@
         <object class="rodape" type="text/html" data="../components/footer.html"></object>
     </section>
     <script src="../plugins/materialize/js/materialize.min.js"></script>
+    <script src="../scripts/Controllers/TokenController.js"></script>
     <script src="../scripts/Controllers/LoginController.js"></script>
     <script>
       var loginController = new LoginController(); 
