Integracao Cadastro com API de usuario

--- a/pages/cadastroUsuario.html
+++ b/pages/cadastroUsuario.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <!-- <script src="../plugins/jquery/jquery.maskedinput.js"></script> -->
+  <!-- <script src="../plugins/jquery/jquery.maskedinput.js"></script> -->  
   <script src="../plugins/materialize/js/materialize.min.js"></script>
 
 </head>
@@ -69,6 +69,7 @@
         </button>
 
         <script src="../scripts/validationsUser.js"></script>
+        <script type="text/javascript" src="../scripts/createUser.js"></script>
 
       </form>
     </div>
