--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   00,00
                 </div>
                 <div class="card-action center-align">
-                  <a class="waves-effect waves-light black btn">Comprar</a>
+                  <a href="pages/produto.html" class="waves-effect waves-light black btn">Comprar</a>
                 </div>
               </div>
             </div>
@@ -63,7 +63,7 @@
                   00,00
                 </div>
                 <div class="card-action center-align">
-                  <a class="waves-effect waves-light black btn">Comprar</a>
+                  <a href="pages/produto.html" class="waves-effect waves-light black btn">Comprar</a>
                 </div>
               </div>
             </div>
@@ -78,7 +78,7 @@
                   00,00
                 </div>
                 <div class="card-action center-align">
-                  <a class="waves-effect waves-light black btn">Comprar</a>
+                  <a href="pages/produto.html" class="waves-effect waves-light black btn">Comprar</a>
                 </div>
               </div>
             </div>
@@ -93,7 +93,7 @@
                   00,00
                 </div>
                 <div class="card-action center-align">
-                  <a class="waves-effect waves-light black btn">Comprar</a>
+                  <a href="pages/produto.html" class="waves-effect waves-light black btn">Comprar</a>
                 </div>
               </div>
             </div>
