Atualizado Cadastro de User(API)

--- a/pages/cadastroUsuario.html
+++ b/pages/cadastroUsuario.html
@@ -69,6 +69,7 @@
         </button>
 
         <script src="../scripts/validationsUser.js"></script>
+        <script type="text/javascript" src="../scripts/Controllers/TokenController.js"></script>
         <script type="text/javascript" src="../scripts/createUser.js"></script>
 
       </form>
