--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@
                           `<div class="col s12 m3">
                             <div class="card small">
                               <div class="card-image">
-                                <img src="${response[i].images[0].url}">
+                                <img src="https://cdn.pichau.com.br/catalog/product/cache/14035723553183b9d29277c409fc60a6/g/9/g933-3.jpg">
                               </div>
                               <div class="card-content">
                                 <strong>R$ </strong>
-                                ${response[i].listPrice}
+                                330,50
                               </div>
                               <div class="card-action center-align">
                                 <a href="pages/produto.html" class="waves-effect waves-light black btn">Comprar</a>
