--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -124,7 +124,12 @@
             <div class="card darken-1">
               <div class="card-content black-text">
                 <span class="card-title black-text">Resumo:</span>
-                
+                <div class="cardc">
+                    <img src="https://cdn.pichau.com.br/catalog/product/cache/14035723553183b9d29277c409fc60a6/g/9/g933-3.jpg" style="width:20%">
+                    <h6>Headset Gamer Bixoveio-V2</h6>
+                    <p class="price">$330.5</p>
+                    <p>Fone gamer por 330? Bixo Veio.</p>
+                  </div>
               </div>
               
               <div class="card-action">
