--- a/pages/produto.html
+++ b/pages/produto.html
@@ -16,13 +16,12 @@
       <object class="cabecalho" type="text/html" data="../components/header.html"></object>
     </section>
 
-    <h1 style="text-align: center;"> Headset </h1>
+    <h1 style="text-align: center;"> Headset Gamer Bixoveio-V2 </h1>
 
     <TABLE style="display: flexbox; border-left: 200px solid white;">
       <TR style="border-right: 300px solid white;">
       <TH COLSPAN="2"> <img src="https://cdn.pichau.com.br/catalog/product/cache/14035723553183b9d29277c409fc60a6/g/9/g933-3.jpg"> </TH>
-      <TH style="font-size: xx-large; border: 2px;"><p style="border: 4px solid black; font-size: xx-large; text-align: center;">24,99</p>
-        <p style="font-size: large; text-align: center;">Em estoque: 420</p>
+      <TH style="font-size: xx-large; border: 2px;"><p style="border: 4px solid black; font-size: xx-large; text-align: center;">$330,50</p>
         <a href="carrinho.html" class="waves-effect waves-light black btn" style="align-self: center;">Comprar</a>
       </TR>
     </TABLE>
@@ -42,7 +41,10 @@
         <object class="rodape" type="text/html" data="../components/footer.html"></object>
     </section>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../plugins/materialize/js/materialize.js"></script>
+    <script src="../scripts/Controllers/TokenController.js"></script>
+    <script src="../scripts/Controllers/CheckoutController.js"></script>
 
     </body>
   </html>
