--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -124,12 +124,17 @@
             <div class="card darken-1">
               <div class="card-content black-text">
                 <span class="card-title black-text">Resumo:</span>
-                <div class="cardc">
-                    <img src="https://cdn.pichau.com.br/catalog/product/cache/14035723553183b9d29277c409fc60a6/g/9/g933-3.jpg" style="width:20%">
-                    <h6>Headset Gamer Bixoveio-V2</h6>
-                    <p class="price">$330.5</p>
-                    <p>Fone gamer por 330? Bixo Veio.</p>
-                  </div>
+                <div class="entrega">
+                    <span>Método de Entrega:</span><span id="deliveryMethod"></span></br>
+                    <span>Prazo:</span><span id="deliveryTime"></span></br>
+                    
+                </div>
+                <div class="products"></div>
+                <div class="infoPrice">
+                  <span>Subtotal:</span><span id="subtotal"></span></br>
+                  <span>Frete:</span><span id="frete"></span></br>
+                  <span>Total:</span><span id="total"></span>
+                </div>
               </div>
               
               <div class="card-action">
