--- a/pages/produto.html
+++ b/pages/produto.html
@@ -22,7 +22,7 @@
       <TR style="border-right: 300px solid white;">
       <TH COLSPAN="2"> <img src="https://cdn.pichau.com.br/catalog/product/cache/14035723553183b9d29277c409fc60a6/g/9/g933-3.jpg"> </TH>
       <TH style="font-size: xx-large; border: 2px;"><p style="border: 4px solid black; font-size: xx-large; text-align: center;">$330,50</p>
-        <a href="carrinho.html" class="waves-effect waves-light black btn" style="align-self: center;">Comprar</a>
+        <a href="#" class="waves-effect waves-light black btn comprar" style="align-self: center;">Comprar</a>
       </TR>
     </TABLE>
 
@@ -45,6 +45,7 @@
     <script src="../plugins/materialize/js/materialize.js"></script>
     <script src="../scripts/Controllers/TokenController.js"></script>
     <script src="../scripts/Controllers/CheckoutController.js"></script>
+    <script src="../scripts/addCart.js"></script>
 
     </body>
   </html>
